--- a/scss/_m-header.scss
+++ b/scss/_m-header.scss
@@ -8,7 +8,7 @@
 	&-logo {
 		width: 168px;
 
-		background: url(../images/m-logo-min.png) no-repeat;
+		background: url('../images/m-logo-min.png') no-repeat;
 		a {
 			color: transparent;
 			font-size: 10px;
