--- a/scss/_m-popup.scss
+++ b/scss/_m-popup.scss
@@ -16,7 +16,7 @@
 }
 
 .popup {
-	font-family: 'HelveticaNeue', Arial, sans-serif;
+	font-family: $font-stack-Helvetica;
 	&__header {
 		position: relative;
 
