--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -99,6 +99,7 @@ $product-size-fit-font-size-tab: 12px;
 $product-size-fit-font-size-mob: 12px;
 $hanger-size: 13px;
 $hanger-size-tab: 10px;
+$hanger-size-mob: 10px;
 $quantity-font-size: 14px;
 $quantity-font-size-mob: 12px;
 $quantity-left-font-size-tab: 12px;
