--- a/scss/_benefits.scss
+++ b/scss/_benefits.scss
@@ -1,4 +1,8 @@
 .benefits {
+	@include respond-to(handhelds) {
+		display: none;
+	}
+
 	display: flex;
 	padding: 25px 0;
 	border-top: 1px solid $border-color;
@@ -41,6 +45,9 @@
 
 .to-top {
 	@include respond-to(tablets) {
+		display: none;
+	}
+	@include respond-to(handhelds) {
 		display: none;
 	}
 
