--- a/scss/_breadcrumbs.scss
+++ b/scss/_breadcrumbs.scss
@@ -2,6 +2,10 @@
 	font-weight: 300;
 	font-size: $breadcrumbs-font-size;
 	&__item {
+		@include respond-to(handhelds) {
+			padding: 3px;
+		}
+
 		padding: 5px;
 
 		color: $breadcrums-link-color;
