--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -3,6 +3,9 @@
 		top: 14px;
 		right: 20px;
 	}
+	@include respond-to(handhelds) {
+		display: none;
+	}
 
 	position: absolute;
 	top: 20px;
@@ -41,6 +44,11 @@
 }
 
 .product {
+	@include respond-to(handhelds) {
+		flex-direction: column;
+		margin-top: 30px;
+	}
+
 	display: flex;
 	margin-top: 40px;
 	&__sale {
@@ -49,13 +57,18 @@
 		left: 27px;
 		z-index: 100;
 		&::before {
-			font-size: 27px;
 			color: $clock-color2;
+			font-size: 27px;
 		}
 	}
 	&__title {
 		@include respond-to(tablets) {
 			font-size: $product-title-font-size-tab;
+		}
+		@include respond-to(handhelds) {
+			color: $primary-text-color;
+			font-weight: 400;
+			font-size: $product-title-font-size-mob;
 		}
 
 		margin: 0;
@@ -70,6 +83,12 @@
 
 			font-size: $product-subtitle-font-size-tab;
 		}
+		@include respond-to(handhelds) {
+			padding-right: 140px;
+
+			font-weight: 300;
+			font-size: $product-subtitle-font-size-mob;
+		}
 
 		display: block;
 		margin: 0;
@@ -81,152 +100,30 @@
 }
 
 .photo {
+	@include respond-to(handhelds) {
+		width: 100%;
+	}
+
 	width: 60%;
 }
 
-/*.photo {
-	@include respond-to(tablets) {
-		flex-direction: column;
-		justify-content: flex-start;
-	}
-
-	display: flex;
-	justify-content: space-between;
-	width: 60%;
-	&__view {
-		@include respond-to(tablets) {
-			order: 1;
-			width: 414px;
-			height: 553px;
-		}
-
-		width: 481px;
-		height: 641px;
-		&-img {
-			@include image-fit;
-		}
-	}
-	&__nav {
-		@include respond-to(tablets) {
-			flex-direction: row;
-			order: 2;
-			height: 91px;
-			margin-top: 24px;
-			.prev {
-				width: 16px;
-				height: 1px;
-				margin: 50px 30px;
-				&::before {
-					top: -5px;
-					left: 1px;
-
-					transform: rotate(-135deg);
-				}
-			}
-			.next {
-				width: 16px;
-				height: 1px;
-				margin: 50px 30px;
-				&::before {
-					top: -5px;
-					left: 3px;
-
-					transform: rotate(45deg);
-				}
-			}
-		}
-
-		display: flex;
-		flex-direction: column;
-		.prev {
-			position: relative;
-
-			width: 1px;
-			height: 16px;
-			margin: 0 auto;
-			margin-bottom: 5px;
-
-			background-color: $inactive-arrow-color;
-			&::before {
-				content: '';
-
-				position: absolute;
-				top: 1px;
-				left: -5px;
-
-				width: 10px;
-				height: 10px;
-				border-top: 1px solid $inactive-arrow-color;
-				border-right: 1px solid $inactive-arrow-color;
-
-				transform: rotate(-45deg);
-			}
-		}
-		&-item {
-			display: block;
-			width: 62px;
-			height: 91px;
-			margin: 10px auto;
-			border: 2px solid transparent;
-			&.nav-item--1 {
-				background: url('../images/photo1-min.jpg') no-repeat;
-				background-size: 100%;
-			}
-			&.nav-item--2 {
-				background: url('../images/photo2-min.jpg') no-repeat;
-				background-size: 100%;
-			}
-			&.nav-item--3 {
-				background: url('../images/photo3-min.jpg') no-repeat;
-				background-size: 100%;
-			}
-			&.nav-item--4 {
-				background: url('../images/photo4-min.jpg') no-repeat;
-				background-size: 100%;
-			}
-			&.active {
-				border: 2px solid $active-item-color;
-
-				background-size: 100%;
-			}
-			&:hover {
-				border: 2px solid $border-color;
-
-				cursor: pointer;
-			}
-		}
-		.next {
-			position: relative;
-
-			width: 1px;
-			height: 16px;
-			margin: 0 auto;
-			margin-bottom: 5px;
-
-			background-color: $active-arrow-color;
-			&::before {
-				content: '';
-
-				position: absolute;
-				top: 3px;
-				left: -5px;
-
-				width: 10px;
-				height: 10px;
-				border-top: 1px solid $active-arrow-color;
-				border-right: 1px solid $active-arrow-color;
-
-				transform: rotate(135deg);
-			}
-		}
-	}
-}*/
-
 .description {
+	@include respond-to(handhelds) {
+		width: 100%;
+	}
+
 	width: 40%;
 }
 
 .price {
+	@include respond-to(handhelds) {
+		margin-top: 23px;
+		margin-bottom: 0;
+		padding: 10px 20px;
+
+		background-color: $price-background-color-mob;
+	}
+
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -241,6 +138,11 @@
 
 				font-size: $product-price-font-size-tab;
 			}
+			@include respond-to(handhelds) {
+				display: block;
+
+				font-size: $product-price-font-size-mob;
+			}
 
 			margin-right: 15px;
 
@@ -253,11 +155,22 @@
 
 				font-size: $product-new-price-font-size-tab;
 			}
+			@include respond-to(handhelds) {
+				display: block;
+
+				font-size: $product-new-price-font-size-mob;
+			}
 
 			color: $new-price-color;
 		}
 	}
 	&__sale {
+		@include respond-to(handhelds) {
+			padding: 14px 5px;
+
+			font-size: $sale-font-size-mob;
+		}
+
 		width: $sale-width;
 		height: $sale-height;
 		padding: 14px 0;
@@ -274,6 +187,12 @@
 .color {
 	@include respond-to(tablets) {
 		font-size: $pick-color-font-size-tab;
+	}
+	@include respond-to(handhelds) {
+		padding: 23px 0;
+		border: none;
+
+		font-size: $pick-color-font-size-mob;
 	}
 
 	padding: 14px 0;
@@ -322,6 +241,11 @@
 	@include respond-to(tablets) {
 		font-size: $pick-size-font-size-tab;
 	}
+	@include respond-to(handhelds) {
+		padding: 23px 0;
+
+		font-size: $pick-size-font-size-mob;
+	}
 
 	padding: 14px 0;
 	border-top: 1px solid $border-color;
@@ -345,6 +269,9 @@
 	&__pic {
 		@include respond-to(tablets) {
 			padding: 9px;
+		}
+		@include respond-to(handhelds) {
+			padding: 10px;
 		}
 
 		display: inline-block;
@@ -384,6 +311,9 @@
 			@include respond-to(tablets) {
 				font-size: $product-size-fit-font-size-tab;
 			}
+			@include respond-to(handhelds) {
+				font-size: $product-size-fit-font-size-mob;
+			}
 
 			font-family: $font-stack-OpenSans;
 			font-size: $product-size-fit-font-size;
@@ -397,6 +327,13 @@
 					padding: 3px;
 
 					font-size: $hanger-size-tab;
+				}
+				@include respond-to(handhelds) {
+					width: 12px;
+					height: 12px;
+					padding: 3px;
+
+					font-size: $hanger-size-mob;
 				}
 
 				position: absolute;
@@ -422,6 +359,12 @@
 }
 
 .quantity {
+	@include respond-to(handhelds) {
+		padding: 23px 0;
+
+		font-size: $quantity-font-size-mob;
+	}
+
 	padding: 14px 0;
 	border-top: 1px solid $border-color;
 
@@ -455,6 +398,11 @@
 		}
 		&-number {
 			@include respond-to(tablets) {
+				width: 35px;
+				height: 35px;
+				padding: 9px;
+			}
+			@include respond-to(handhelds) {
 				width: 35px;
 				height: 35px;
 				padding: 9px;
@@ -517,6 +465,13 @@
 
 			font-size: $quantity-left-font-size-tab;
 		}
+		@include respond-to(handhelds) {
+			left: 10%;
+
+			width: 90%;
+
+			font-size: $quantity-left-font-size-mob;
+		}
 
 		position: absolute;
 		top: -54px;
@@ -533,6 +488,9 @@
 		}
 		&::after {
 			@include respond-to(tablets) {
+				left: 75%;
+			}
+			@include respond-to(handhelds) {
 				left: 75%;
 			}
 
@@ -552,6 +510,9 @@
 
 .like {
 	@include respond-to(tablets) {
+		padding: 18px;
+	}
+	@include respond-to(handhelds) {
 		padding: 18px;
 	}
 
@@ -577,6 +538,11 @@
 
 				transform: translate(-50%, -50%);
 			}
+			@include respond-to(handhelds) {
+				left: 50%;
+
+				transform: translate(-50%, -50%);
+			}
 
 			position: absolute;
 			top: 50%;
@@ -592,6 +558,9 @@
 		@include respond-to(tablets) {
 			display: none;
 		}
+		@include respond-to(handhelds) {
+			display: none;
+		}
 
 		color: $primary-text-color;
 		font-family: $font-stack-Helvetica;
@@ -601,6 +570,12 @@
 
 .add-to-cart {
 	@include respond-to(tablets) {
+		float: right;
+
+		margin-left: 0;
+		padding-left: 15px;
+	}
+	@include respond-to(handhelds) {
 		float: right;
 
 		margin-left: 0;
@@ -632,6 +607,10 @@
 			padding: 12px 15px;
 			padding-left: 20px;
 		}
+		@include respond-to(handhelds) {
+			padding: 12px 15px;
+			padding-left: 20px;
+		}
 
 		display: inline-block;
 		padding: 12px 25px;
@@ -653,6 +632,11 @@
 .make-order {
 	@include respond-to(tablets) {
 		font-size: $make-order-font-size-tab;
+	}
+	@include respond-to(handhelds) {
+		padding: 23px 0;
+
+		font-size: $make-order-font-size-mob;
 	}
 
 	padding: 14px 0;
@@ -683,15 +667,30 @@
 		font-family: $font-stack-Helvetica;
 	}
 	&__number {
+		@include respond-to(handhelds) {
+			display: block;
+			margin: 0;
+			margin-bottom: 10px;
+			padding-left: 30px;
+		}
+
 		margin-right: 10px;
 		margin-left: 10px;
 
 		color: $link-color;
 		font-family: $font-stack-Helvetica;
 		&:nth-child(2) {
+			@include respond-to(handhelds) {
+				padding-left: 30px;
+			}
+
 			padding-left: 25px;
 		}
 		&-text {
+			@include respond-to(handhelds) {
+				display: none;
+			}
+
 			color: $link-color;
 			font-family: $font-stack-Helvetica;
 		}
@@ -702,6 +701,9 @@
 }
 
 .location {
+	@include respond-to(handhelds) {
+		margin-top: 15px;
+	}
 	&.icon--location-pin {
 		position: relative;
 		&::before {
@@ -733,6 +735,11 @@
 			margin-bottom: 18px;
 
 			font-size: $details-title-font-size-tab;
+		}
+		@include respond-to(handhelds) {
+			margin-bottom: 18px;
+
+			font-size: $details-title-font-size-mob;
 		}
 
 		position: relative;
@@ -768,6 +775,9 @@
 		@include respond-to(tablets) {
 			font-size: $details-item-font-size-tab;
 		}
+		@include respond-to(handhelds) {
+			font-size: $details-item-font-size-mob;
+		}
 
 		font-size: $details-item-font-size;
 		&-title {
@@ -794,6 +804,11 @@
 
 			font-size: $details-item-font-size-tab;
 		}
+		@include respond-to(handhelds) {
+			margin-top: 14px;
+
+			font-size: $details-item-font-size-mob;
+		}
 
 		margin-top: 25px;
 
@@ -806,6 +821,10 @@
 			vertical-align: top;
 		}
 		&-number {
+			@include respond-to(handhelds) {
+				width: 70%;
+			}
+
 			display: inline-block;
 			width: 75%;
 			margin: 0;
@@ -821,6 +840,11 @@
 			margin: 0;
 
 			font-size: $details-item-font-size-tab;
+		}
+		@include respond-to(handhelds) {
+			margin: 0;
+
+			font-size: $details-item-font-size-mob;
 		}
 
 		margin: 0;
@@ -871,6 +895,19 @@
 			border: 1px solid $social-item-color;
 
 			border-radius: 100%;
+		}
+	}
+	&.social--after {
+		@include respond-to(handhelds) {
+			display: flex;
+			padding-bottom: 0;
+		}
+
+		display: none;
+	}
+	&.social--before {
+		@include respond-to(handhelds) {
+			display: none;
 		}
 	}
 }
