--- a/views/index.pug
+++ b/views/index.pug
@@ -11,6 +11,9 @@ html(lang="en")
 		header(class="header")
 			div(class="header-logo", id="logo")
 				a(href="#") One CLub
+			div(class="shop")
+				a(href="#")
+					img(src="images/mob-shop-bag.png", alt="go shop", class="shop-img")
 			div(class="switcher")
 				a(href="#", class="switcher__item icon icon--clock")
 					span Акции
@@ -28,13 +31,21 @@ html(lang="en")
 				form(action="#", class="search")
 					input(type="search", placeholder="Поиск...", class="search__input")
 					button(type="submit", class="search-icon")
-			nav(class="main-menu")
-				a(href="#", class="main-menu__item") Женщинам
-				a(href="#", class="main-menu__item") Мужчинам
-				a(href="#", class="main-menu__item") Детям
-				a(href="#", class="main-menu__item") Косметика
-				a(href="#", class="main-menu__item") Для дома
-				a(href="#", class="main-menu__item") Бренды
+			nav(role="navigation")
+				div(class="menu-icon", data-toggle-menu)
+				ul(class="main-menu")
+					li
+						a(href="#", class="main-menu__item") Женщинам
+					li
+						a(href="#", class="main-menu__item") Мужчинам
+					li
+						a(href="#", class="main-menu__item") Детям
+					li
+						a(href="#", class="main-menu__item") Косметика
+					li
+						a(href="#", class="main-menu__item") Для дома
+					li
+						a(href="#", class="main-menu__item") Бренды
 		main(class="main")
 			nav(class="breadcrumbs")
 				a(href="#", class="breadcrumbs__item") Главная страница
@@ -160,7 +171,7 @@ html(lang="en")
 							span(class="details__text-item") 3. Сервисом доставки "Нова пошта" по всей Украине.
 						p(class="details__text") 
 							b Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.
-					div(class="social")
+					div(class="social social--before")
 						span(class="social__text") Поделиться
 						div(class="social-links")
 							a(href="#", class="social__item icon icon--facebook")
@@ -168,44 +179,48 @@ html(lang="en")
 							a(href="#", class="social__item icon icon--google-plus")
 							a(href="#", class="social__item icon icon--twitter")
 			section(class="similar-goods")
-				h2(class="similar-goods__title") Похожие товары
+				h2(class="similar-goods__title icon icon--minus") 
+					span Похожие товары
 				div(class="similar-goods__block")
 					div(class="item")
-						div(class="item__img")
-							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						div(class="item__img item--1")
+							a(href="#") Andy Striped Mini Skirt
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
 							span(class="item__price price--old") 30 000 грн
 							span(class="item__price price--new") 15 000 грн
 					div(class="item")
-						div(class="item__img")
-							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						div(class="item__img item--2")
+							a(href="#") Andy Striped Mini Skirt
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
 							span(class="item__price price--old") 30 000 грн
 							span(class="item__price price--new") 15 000 грн
 					div(class="item")
-						div(class="item__img")
-							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						div(class="item__img item--3")
+							a(href="#") Andy Striped Mini Skirt
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
 							span(class="item__price price--old") 30 000 грн
 							span(class="item__price price--new") 15 000 грн
 					div(class="item")
-						div(class="item__img")
-							a(href="#")
-								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						div(class="item__img item--4")
+							a(href="#") Andy Striped Mini Skirt
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
 							span(class="item__price price--old") 30 000 грн
 							span(class="item__price price--new") 15 000 грн
+				div(class="social social--after")
+					span(class="social__text") Поделиться
+					div(class="social-links")
+						a(href="#", class="social__item icon icon--facebook")
+						a(href="#", class="social__item icon icon--vk")
+						a(href="#", class="social__item icon icon--google-plus")
+						a(href="#", class="social__item icon icon--twitter")
 			section(class="recommendation")
 				span(class="recommendation__text") Смотрите также:
 				a(href="#", class="recommendation__link") Одежда
